syntax = "proto3";

package redcarbon.agents_public.v1;

message AgentConfiguration {
  optional QRadarJobConfiguration qradar_job_configuration = 1;
  optional SentinelOneJobConfiguration sentinelone_job_configuration = 2;
  optional FortiSIEMJobConfiguration fortisiem_job_configuration = 3;
}

message QRadarJobConfiguration {
  string host = 1;
  string token = 2;
  bool verify_ssl = 3;
}

message SentinelOneJobConfiguration {
  string host = 1;
  string token = 2;
  bool verify_ssl = 3;
}

message FortiSIEMJobConfiguration {
  string host = 1;
  string username = 2;
  string password = 3;
  bool verify_ssl = 4;
}

message ValueHeader {
  repeated string values = 1;
}

message AgentRequest {
  string request_id = 1;
  string method = 2;
  string url = 3;
  map<string, ValueHeader> headers = 4;
  bytes body = 5;
}

message AgentResponse {
  int32 status = 1;
  map<string, ValueHeader> headers = 2;
  bytes body = 3;
}
