syntax = "proto3";

package redcarbon.agents_public.v1;

import "google/protobuf/timestamp.proto";
import "redcarbon/agents_public/v1/types.proto";

service AgentsPublicAPIsV1Srv {
  rpc HZ(HZRequest) returns (HZResponse) {}
  rpc IngestIncident(IngestIncidentRequest) returns (IngestIncidentResponse) {}
  rpc FetchAgentConfiguration(FetchAgentConfigurationRequest) returns (FetchAgentConfigurationResponse) {}
  rpc FetchAgentRequests(FetchAgentRequestsRequest) returns (FetchAgentRequestsResponse) {}
  rpc SubmitAgentResponse(SubmitAgentResponseRequest) returns (SubmitAgentResponseResponse) {}
}

message HZRequest {
  string hostname = 1;
  string ip = 2;
}

message HZResponse {
  google.protobuf.Timestamp received_at = 1;
}

message IngestIncidentRequest {
  string title = 1;
  string description = 2;
  string raw_data = 3;
  uint32 severity = 4;
  string origin = 5;
  optional string original_id = 6;
  optional string original_url = 7;
}

message IngestIncidentResponse {}

message FetchAgentConfigurationRequest {}

message FetchAgentConfigurationResponse {
  AgentConfiguration configuration = 1;
}

message FetchAgentRequestsRequest {}

message FetchAgentRequestsResponse {
  repeated AgentRequest requests = 1;
}

message SubmitAgentResponseRequest {
  string request_id = 1;
  AgentResponse response = 2;
}

message SubmitAgentResponseResponse {}